--- a/style.css
+++ b/style.css
@@ -328,7 +328,7 @@ mainvisual
     margin-bottom: 20px;
 }
 
-.blog-item a {
+.next-page {
     color: #fff;
     font-size: 0.875rem;
     text-decoration: underline;
@@ -509,6 +509,7 @@ Blogページ
 
 .blog-item a h4 {
     font-size: 1.175rem;
+    text-decoration: none !important;
 }
 
 /* ------------------------------------
