--- a/style.css
+++ b/style.css
@@ -88,10 +88,20 @@ Header
     position: absolute;
     width: 30px;
     height: 2px;
-    background-color: #fff;
+    background-color: #ffffffdd;
     border-radius: 4px;
     transition: all 0.5s;
 }
+
+.toggle_btn {
+    opacity: 0.7;
+    z-index: 30;
+}
+
+.toggle_btn .toggle_btn-black-color {
+    /* background-color: #FF0000; */
+}
+
 /*
 1本目の線の位置を設定
   */
@@ -113,6 +123,47 @@ Header
 /* PC時ハンバーガーメニュー非表示 */
 .pc-toogle {
     display: none;
+}
+
+/* ------------------------------------
+閉じるボタン:変形処理
+------------------------------------ */
+.toggle_btn.active-close-btn span:nth-child(1) {
+    top: 34px;
+    right: 20px;
+    background :#000000;
+    transform: rotate(-45deg);
+}
+
+.toggle_btn.active-close-btn span:nth-child(2) {
+    display: none;
+}
+.toggle_btn.active-close-btn span:nth-child(3) {
+    top: 34px;
+    background: #000000;
+    transform: rotate(45deg);
+}
+
+
+/* ------------------------------------
+閉じるボタン
+------------------------------------ */
+.close_btn span {
+    display: block;
+    position: absolute;
+    width: 30px;
+    height: 2px;
+    background-color: #707070;
+    border-radius: 4px;
+    transition: all 0.5s;
+}
+
+.close_btn span:nth-child(1) {
+    top: 24px;
+}
+
+.close_btn span:nth-child(2) {
+    top: 46px;
 }
 
 /* ------------------------------------
@@ -544,6 +595,40 @@ Blogページ
 }
 
 /* ----------------------------------------
+カテゴリページ
+---------------------------------------- */
+.category-page-margin {
+    margin-bottom: 100px;
+}
+
+.category-title-block-pc {
+    position: relative;
+    width: 1100px;
+    margin: 0 auto
+}
+
+.category-title-pc {
+    font-size: 1.875rem;
+    border: 1px solid #707070;
+    position: absolute;
+    letter-spacing: 1px;
+    padding: 15px 50px;
+    background-color: #000000;
+    opacity: 0.7;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+}
+
+.category-title-block-sp {
+    display: none;
+}
+
+
+/* ----------------------------------------
 SP
 ---------------------------------------- */
 @media screen and (max-width:900px) {
@@ -790,20 +875,66 @@ SP：利用規約
         padding: 0 10px;
     }
 
+
+/* ----------------------------------------
+SP：カテゴリページ
+---------------------------------------- */
+    .category-title-block-sp {
+        display: block;
+        position: relative;
+    }
+
+    .category-title-block-pc {
+        display: none;
+        margin: 0 auto;
+        width: 90%;
+    }
+
+    .category-title-img-sp {
+        width: 100%;
+    }
+
+    .category-title-sp {
+        text-align: center;
+        font-size: 1.875rem;
+        position: absolute;
+        border: 1px solid #707070;
+        padding: 15px 10px;
+        background-color: #000000;
+        opacity: 0.7;
+        width: 250px;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+    }
+
+    .category-bottom {
+        margin-bottom: 100px !important;
+    }
+
 /* ----------------------------------------
 モーダルウィンドウ
 ---------------------------------------- */
  /* ハンバーガーメニュー */
 .add-menu-sp{
-    position: fixed; /* *1 */
+    position: fixed; 
     top: 0;
     right: 0;
     background-color: #ffffffdd;
-    display: block !important; /* *3 */
+    display: block !important;
     width: 70%;
     height: 100vh;
     padding: 100px 0;
-    z-index: 2; /* ※2 */
+    z-index: 2; 
+}
+
+.add-close-btn {
+    position: fixed;
+    top: 10;
+    right: 10;
+
 }
 
 .add-menu-sp li{
